chore: Memory hygiene protocol + VS Code settings optimization [AGENT-0019]
- Added Section 5.9: Memory & Process Hygiene Protocol to AGENTS.md
- Increased TypeScript server memory from 8GB to 16GB
- Increased large files memory limit from 8GB to 16GB
- Added new test stubs for users audit-logs and permissions routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,7 @@
   },
 
   "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.tsserver.maxTsServerMemory": 8192,
+  "typescript.tsserver.maxTsServerMemory": 16384,
   "typescript.tsserver.experimental.enableProjectDiagnostics": false,
   "typescript.disableAutomaticTypeAcquisition": true,
 
@@ -89,8 +89,8 @@
     "**/*.lock": true
   },
 
-  // Performance optimizations for 12-core/36GB MacBook
-  "files.maxMemoryForLargeFilesMB": 8192,
+  // Performance optimizations for 35GB allocated to VS Code
+  "files.maxMemoryForLargeFilesMB": 16384,
 
   // Git performance
   "git.untrackedChanges": "hidden",
